// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createGroup with networkId includes networkId in variables 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($data: GroupInput) {
        createGroup(data: $data) {
          id
          hasModeratorRole
          group {
            id
            name
            slug
          }
        }
      }
      ",
    "variables": Object {
      "data": Object {
        "name": "thename",
        "networkId": 123,
        "slug": "theslug",
      },
    },
  },
  "meta": Object {
    "analytics": "Group Created",
    "extractModel": "Membership",
    "name": "thename",
    "networkId": 123,
    "slug": "theslug",
  },
  "type": "Review/CREATE_GROUP",
}
`;

exports[`createGroup without networkId omits networkId from variables 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($data: GroupInput) {
        createGroup(data: $data) {
          id
          hasModeratorRole
          group {
            id
            name
            slug
          }
        }
      }
      ",
    "variables": Object {
      "data": Object {
        "name": "thename",
        "slug": "theslug",
      },
    },
  },
  "meta": Object {
    "analytics": "Group Created",
    "extractModel": "Membership",
    "name": "thename",
    "slug": "theslug",
  },
  "type": "Review/CREATE_GROUP",
}
`;
